--- a/Services/services.html
+++ b/Services/services.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Spa Quatros - Home Page</title>
+    <title>Spa Quatros - Services</title>
     <link rel="stylesheet" href="CSS/main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"  crossorigin="anonymous"
     integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"></script> <!-- font awesome CDN -->
 </head>
 <body>
-    <nav id="nav">
-        <!-- hamburger div -->
+    <!-- <nav id="nav">
+        <!-- hamburger div ->
         <section id="hamburger_section">
-            <a href="" id="hamburger"> <!-- the hamburger -->
+            <a href="" id="hamburger"> <!-- the hamburger ->
                 <i class="fas fa-bars"></i>
-            </a> <!-- the hamburger -->
+            </a> <!-- the hamburger ->
 
-            <article><!-- hamburger dropdown part -->
+            <article><!-- hamburger dropdown part ->
                 <a href="#">Home</a>
                 <a href="#">Services</a>
                 <a href="#">The Spa</a>
             </article>
-            <!-- the dropdown of the hamburger end -->
-        </section> <!-- hamburger section end-->
+            <!-- the dropdown of the hamburger end ->
+        </section> <!-- hamburger section end->
         <section id="logo_and_links">
             <a href="#" class="logo_pic"></a>
             <article>
@@ -35,7 +35,7 @@
         <section id="cta_nav_section">
             <a href="" class="reserve_cta">Reserve A Spot</a>
         </section>
-    </nav>
+    </nav> -->
 
     <a href="#header" id="fixed_up">
         <!-- <i class="fas fa-arrow-alt-square-up"></i> -->
@@ -44,19 +44,21 @@
     </a>
 
     <header id="header">
-        <article id="opening_article">
-            <h1>Services</h1>
-        
-            <h2>
-                Add value to your vacation
-            </h2>
-            <p>
-                Pick your therapy 
-                from the selections 
-                below to maximize 
-                your vacations relaxation. 
-            </p>
-        </article>
+        <section id="opening_section">
+            <article id="opening_article">
+                <h1>Services</h1>
+            
+                <h2>
+                    Add value to your vacation
+                </h2>
+                <p>
+                    Pick your therapy 
+                    from the selections 
+                    below to maximize 
+                    your vacations relaxation. 
+                </p>
+            </article>
+        </section>
 
         <section id="mobile_contents_header">
             <h2>Page-Jump Links</h2>
