--- a/The Spa (about)/about_spa.html
+++ b/The Spa (about)/about_spa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Spa Quatros - The Spa</title>
+    <title>Spa Quatros - Our Spa</title>
     <link rel="stylesheet" href="CSS/main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"  crossorigin="anonymous"
     integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"></script> <!-- font awesome CDN -->
