--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -159,9 +159,9 @@
                 <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/53821018_2259257547724604_8346915725960544256_n.jpg?_nc_cat=108&_nc_oc=AQmKZIzwpLnZ35hzHadLgwL3eA4c5bGErVEOfRxjurOGButRyZxCtHa2b8I8A90HRMg&_nc_ht=scontent-lga3-1.xx&oh=4aa4f21f494e2e7d44db1fab01ef0438&oe=5E3A1FFD" alt="">
 
                 <div> <!-- slideshow dots -->
-                    <a href=""> <!-- add circle icons --> </a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="" class="dot"> <!-- add circle icons --> </a>
+                    <a href="" class="dot"></a>
+                    <a href="" class="dot"></a>
                 </div>
             </article>
         </section> 
