--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -93,47 +93,52 @@
         <div id="benefit_overlay">
             <section id="ending_benefits_section">
                 <article>
-                    <div>
-                        <i class="fas fa-user-plus"></i>
-                        <p>
-                            <span>DOH & NC2 Certified Staff</span>
-                            <span>DOH & NC2 Certified Staff Trained, experienced staff</span>
-                        </p> 
+                    <div class="benefit_wrapper">
+                        <div>
+                            <i class="fas fa-user-plus"></i>
+                            <p>
+                                <span>DOH & NC2 Certified</span>
+                                <span>DOH & NC2 Certified Staff Trained, experienced staff</span>
+                            </p> 
+                        </div>
+                        <div>
+                            <i class="fas fa-ruble-sign"></i>
+                            <p>
+                                <span>Competetive Prices</span>
+                                <span>Competetive Prices. Lorem ipsum, dolor sit amet consectetur</span>
+                            </p>
+                        </div>
+                        <div>
+                            <i class="fas fa-hand-holding-heart"></i>
+                            <p>
+                                <span>Rich Health Benefits</span>
+                                <span>Lorem ipsum, dolor sit amet consectetur Rich in Health Benefits</span>
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <i class="fas fa-ruble-sign"></i>
-                        <p>
-                            <span>Competetive Prices</span>
-                            <span>Competetive Prices. Lorem ipsum, dolor sit amet consectetur</span>
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fas fa-hand-holding-heart"></i>
-                        <p>
-                            <span>Rich in Health Benefits</span>
-                            <span>Lorem ipsum, dolor sit amet consectetur Rich in Health Benefits</span>
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fas fa-spa"></i>
-                        <p>
-                            <span>Your Boracay trip enhanced</span>
-                            <span>Lorem ipsum, dolor sit amet consectetur Your Boracay trip enhanced</span>
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fas fa-yin-yang"></i>
-                        <p>
-                            <span>Health Benefits Rich in</span>
-                            <span>Lorem ipsum, dolor sit amet consectetur Rich in Health Benefits</span>
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fas fa-cut"></i>
-                        <p>
-                            <span>trip enhanced Your Boracay</span>
-                            <span>Lorem ipsum, dolor sit amet consectetur Your Boracay trip enhanced</span>
-                        </p>
+                    
+                    <div class="benefit_wrapper">
+                        <div>
+                            <i class="fas fa-spa"></i>
+                            <p>
+                                <span>trip enhanced</span>
+                                <span>Lorem ipsum, dolor sit Your Boracay trip enhanced</span>
+                            </p>
+                        </div>
+                        <div>
+                            <i class="fas fa-yin-yang"></i>
+                            <p>
+                                <span>Health Benefits Rich</span>
+                                <span>Lorem ipsum, dolor sit amet consectetur Rich in Health Benefits</span>
+                            </p>
+                        </div>
+                        <div>
+                            <i class="fas fa-cut"></i>
+                            <p>
+                                <span>enhanced Boracay</span>
+                                <span>Lorem ipsum, dolor consectetur Your Boracay trip enhanced</span>
+                            </p>
+                        </div>
                     </div>
                 </article>
                 <!-- <a href="" class="reserve_cta">Reserve Today</a> -->
@@ -144,12 +149,10 @@
             <article id="about_us_text">
                 <h2>About Quatros</h2>
                 <p>
-                    Measi a ganze es i mog di fei aasgem, 
-                    Blosmusi. Schmankal zwoa Ramasuri.
-                    Edlweiss. Blosmusi. Schmankal zwoa 
-                    Wia vo de Weiznglasl wos, Ramasuri
-                    imma hogg di hera Guglhupf! imma hogg 
-                    Wia di hera vo de Weiznglasl wos, Guglhupf!
+                    Measi a ganze es i mog di fei aasgem, Blosmusi. 
+                    Schmankal zwoa Ramasuri. Edlweiss. Weiznglasl 
+                    wos, Ramasuri imma hogg di hera! imma hogg Wia 
+                    di hera vo de Weiznglasl wos, Guglhupf!
                 </p>
             </article>
             
@@ -445,8 +448,8 @@
                             <p>
                                 With this package you can 
                                 get our Shiatsu and Swedish 
-                                massage treatments together in
-                                one session for a reduced price! 
+                                massage treatments <strong>together in
+                                one session for a reduced price!</strong>  
                                 *Inquire for time length and similar packages.
                             </p>
                             <a href="" class="reserve_cta">Book Now</a>
@@ -463,8 +466,8 @@
                         </div>
                         <div class="pop_serve_back">
                             <p>
-                                Get 30% off a one hour 
-                                session of your choice
+                                Get <strong>30% off a one hour 
+                                session</strong> of your choice
                                 the first time you use
                                 our off-site service. 
                                 That means we'll come to you!
@@ -486,7 +489,7 @@
                             <p>
                                 From December 1st to December 20th
                                 come to Spa Quatros for our Holiday 
-                                Deal. Get 30 minutes free when you 
+                                Deal. <strong>Get 30 minutes free</strong> when you 
                                 order an 1 hour long, whole body massage!
                             </p>
                             <a href="" class="reserve_cta">Book Now</a>
@@ -536,7 +539,7 @@
 
         <section id="paragraph_section">
             <h2>
-                rejuvenate your body
+                your body's rejuvenation
             </h2>
             <p>
                 At Spa Quatros we create unforgettable experiences 
@@ -559,30 +562,30 @@
                 <article>
                     <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-0/c0.61.200.200a/p200x200/11891252_1486169561700077_7644089581164098060_n.jpg?_nc_cat=104&_nc_oc=AQmo7kua-J9fYpJHDGHSWE3pfamov4TNQKa9p1qpAmaPF4LxnkrCnYLI1zeCPI7p1LM&_nc_ht=scontent-lga3-1.xx&oh=ffbe5340aacd0f9db1088f1f5a54d78b&oe=5E250883" alt="">
                     <!-- <div> -->
-                        <p>joselyn nerie</p>
+                        <!-- <p>joselyn nerie</p> -->
                     <!-- </div> -->
                 </article>
 
                 <article>
                     <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/59285532_2299203547063337_8026599757969358848_n.jpg?_nc_cat=106&_nc_oc=AQmDOWQl3Xs798E1O6Mpf0-C0z91OXqsHyHT6P0b19wnOO-LznwmNliLdgks0RaTKuI&_nc_ht=scontent-lga3-1.xx&oh=20a0b21859890387ae15cd996d76d060&oe=5E321CA1" alt="">
                     <!-- <div> -->
-                        <p>carol derane</p>
+                        <!-- <p>carol derane</p> -->
                     <!-- </div> -->
                 </article>
 
                 <article>
                     <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-0/c0.20.200.200a/p200x200/59688217_2299203380396687_9019521563157856256_n.jpg?_nc_cat=104&_nc_oc=AQncPPM5VaFqGu0A5jb-qLHR3jt-1xO76FvaV4AD40YclRlYtUha5O8Z35XidgBb7WA&_nc_ht=scontent-lga3-1.xx&oh=6bc0a594845b2860e7576cb85e7e619d&oe=5E306C4B" alt="">
                     <!-- <div> -->
-                        <p>rachel cantoa</p>
+                        <!-- <p>rachel cantoa</p> -->
                     <!-- </div> -->
                 </article>
             </div>
         </section>
 
-        <div style="position: relative;">
+        <!-- <div style="position: relative;">
             <span style="width: 100px; height: 3px; position: absolute; display: block; 
             background: white; left: 50%; margin-left: -50px; z-index: 70;"></span>
-        </div>
+        </div> -->
 
         <section id="testimony_section">
             <h2>
